2011-01-03  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/ClaspResultOnlineParser.cpp: Remove X-Mas leftover casserole.
	* src/ContextGenerator.cpp: Likewise.
	* src/QueryPlan.cpp: Likewise.
	* src/QueryPlanGenerator.cpp: Likewise.
	* src/dmcsGen.cpp: Likewise.
	* src/dynGen.cpp: Likewise.
	* src/staticGen.cpp: Likewise.

	* configure.ac: Move src/tests to testsuite.
	* Makefile.am: Likewise.
	* src/Makefile.am: Likewise.

2011-01-03  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/network/Makefile.am: Add ThreadFactory.cpp
	* include/network/Makefile.am: Add ThreadFactory.h

	* src/network/ThreadFactory.cpp: New file.
	* include/network/ThreadFactory.h: Likewise.

	* include/network/Handler.h: Add specialized Handler for streaming dmcs.
	* include/network/Handler.tcc: Likewise.

	* include/CommandType.h: Remove thread creation methods.
	* include/dyndmcs/InstantiatorCommandType.h: Likewise.
	* include/dyndmcs/DynamicCommandType.h: Likewise.
	* include/dmcs/StreamingCommandType.h: Likewise.
	* include/dmcs/PrimitiveCommandType.h: Likewise.
	* include/dmcs/OptCommandType.h: Likewise.
	* src/dmcs/StreamingCommandType.cpp: Likewise.

2010-12-30  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/parser/Makefile.am (AM_CPPFLAGS): Add BM_CPPFLAGS.

2010-12-29  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/parser/Makefile.am: Compile libparser.a.
	* configure.ac: Likewise.
	* src/Makefile.am: Likewise.

	* src/tests/Makefile.am: Fixed FTBFS on linux.
	Link testClaspResultOnlineParser and testBlockingClasp with libparser.a.

	* src/tests/testQueryPlan.cpp: Fixed FTBFS of testsuite.
	* src/tests/testMatch.cpp: Likewise.
	* src/tests/testGraphProp.cpp: Likewise.
	* src/tests/testClaspResultOnlineParser.cpp: Likewise.
	* src/tests/testBlockingClasp.cpp: Likewise.
	* src/tests/Makefile.am: Likewise.

	* include/dyndmcs/Match.h: Include missing list and vector.

2010-12-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
